Apple Website Clone

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Apple (Clone)</title>
-    <link rel="stylesheet" href="output.css">
+    <link rel="stylesheet" href="./src/output.css">
     <link rel="shortcut icon"
-        href="../assets/img/icon/icon.png"
+        href="./assets/img/icon/icon.png"
         type="image/x-icon">
 </head>
 
@@ -174,7 +174,7 @@
                 <div></div>
                 <div class="flex justify-center flex-col text-center mx-auto mb-[40px] font-sf-pro-display">
                     <h2 class="w-[40vw] md:w-full mx-auto">
-                        <img src="../assets/img/Logos/Apple-Vision-Pro/promo_logo_apple_vision_pro__90zi46p7dc2y_small_2x.png"
+                        <img src="./assets/img/Logos/Apple-Vision-Pro/promo_logo_apple_vision_pro__90zi46p7dc2y_small_2x.png"
                             alt="" class="mx-auto w-[180px]">
                     </h2>
                     <h3 class="halo mt-1 mx-auto md:w-full max-w-[230px] leading-[22px] mb-5 text-[19px]">Welcome to the
@@ -236,7 +236,7 @@
                 <div>
                     <div class="text-center text-white pt-9 font-sf-pro-display">
                         <h2 class="w-[40vw] md:w-full mx-auto">
-                            <img src="../assets/img/Logos/Apple-Card/logo__dcojfwkzna2q_small_2x.png" alt=""
+                            <img src="./assets/img/Logos/Apple-Card/logo__dcojfwkzna2q_small_2x.png" alt=""
                                 class="w-[120px] mx-auto">
                         </h2>
                         <h3 class="text-[19px] min-[832px]:text-[19px] mt-1 text-black max-w-[260px] mx-auto">Get up to
@@ -258,7 +258,7 @@
                 <div>
                     <div class="mx-auto text-center text-black md:w-full pt-9 font-sf-pro-display">
                         <h2 class="w-[30vw] md:w-full mx-auto">
-                            <img src="../assets/img/Logos/iPhone-Tradein/logo_tradein__d1fpktgipvki_small_2x.png" alt=""
+                            <img src="./assets/img/Logos/iPhone-Tradein/logo_tradein__d1fpktgipvki_small_2x.png" alt=""
                                 class="mx-auto w-[160px]">
                         </h2>
                         <h3 class="text-[19px] min-[832px]:text-[19px] mt-1 md:w-full mx-auto max-w-[285px]">Get
@@ -282,9 +282,9 @@
                     <div class="flex flex-col items-center  min-[735px]:items-start justify-between h-full anjnj">
                         <div class="hidden min-[735px]:block"></div>
                         <div class="max-w-[220px] top-info">
-                            <img src="https://www.apple.com/v/home/bm/images/tv-plus-gallery/logo_hero_light__d7t8cya4x26a_small_2x.png"
+                            <img src="./assets/img/Apple-Tv/killers-of-the-flowers-moon/1096x472.png"
                                 alt="" class="w-[68px] mx-auto mt-5 mb-[5px]">
-                            <img src="../assets/img/Apple-Tv/killers-of-the-flowers-moon/1096x472.png"
+                            <img src="./assets/img/Apple-Tv/killers-of-the-flowers-moon/1096x472.png"
                                 alt="" class="w-1/2 mx-auto">
                         </div>
                         <div
@@ -882,7 +882,7 @@
                 </h1>
         </div>
     </div>
-    <script src="index.js"></script>
+    <script src="./src/index.js"></script>
 </body>
 
 </html>
