Apple Website Clone

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                 <div>
                     <div class="text-center text-white pt-9">
                         <h2 class="w-[40vw] md:w-full mx-auto"><img
-                                src="../assets/img/Logos/Apple-Watch-Series-9/promo_logo_apple_watch_series_9__ckz0hbex0yeu_small_2x.png"
+                                src="./assets/img/Logos/Apple-Watch-Series-9/promo_logo_apple_watch_series_9__ckz0hbex0yeu_small_2x.png"
                                 alt="" class="w-[150px] mx-auto"></h2>
                         <h3 class="text-[19px] min-[832px]:text-[19px] mt-1 font-sf-pro-display">Smarter. Brighter.
                             Mightier.</h3>
