Apple Website Clone

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                         <a href="https://www.apple.com/macbook-air/"
                             class="bg-bg-button hover:bg-bg-button-hover px-[15px] py-[7px] rounded-full md:button-md text-sm">Learn more</a>
                     </div>
-                    <div class=" flex items-center">
+                    <div class="flex items-center ">
                             <a href="https://www.apple.com/us/shop/got text-smo/buy_mac/macbook_air"
                                 class="ml-5 border border-bg-button hover:text-white hover:bg-bg-button px-[15px] py-[7px] rounded-full text-bg-button md:button-md text-sm">Buy</a>
                     </div>
@@ -445,7 +445,7 @@
                                             class="cursor-pointer min-[832px]:cursor-text border-b-[2px] min-[832px]:border-none py-2 li">
                                             <div
                                                 class="flex items-center justify-between min-[832px]:text-text-footer min-[832px]:font-semibold min-[832px]:mb-[10px]">
-                                                Shop an   text-smd Learn
+                                                Shop and Learn
                                                 <span class="min-[832px]:hidden">
                                                     <svg class="footer-icon-svg" width="11" height="6"
                                                         viewBox="0 0 11 6">
