Use footer-accordion selector

--- a/index.html
+++ b/index.html
@@ -439,10 +439,10 @@
                             </section>
                             <div class="border-b"></div>
                             <section class="pt-5 text-black/70 ">
-                                <ul class="min-[832px]:grid-cols-5 min-[832px]:grid">
+                                <ul class="footer-accordion min-[832px]:grid-cols-5 min-[832px]:grid">
                                     <div>
                                         <li
-                                            class="cursor-pointer min-[832px]:cursor-text border-b-[2px] min-[832px]:border-none py-2 li">
+                                            class="cursor-pointer min-[832px]:cursor-text border-b-[2px] min-[832px]:border-none py-2">
                                             <div
                                                 class="flex items-center justify-between min-[832px]:text-text-footer min-[832px]:font-semibold min-[832px]:mb-[10px]">
                                                 Shop and Learn
@@ -516,7 +516,7 @@
                                             </ul>
                                         </li>
                                         <li
-                                            class="cursor-pointer min-[832px]:cursor-text border-b-[2px] min-[832px]:border-none py-2 li">
+                                            class="cursor-pointer min-[832px]:cursor-text border-b-[2px] min-[832px]:border-none py-2">
                                             <div
                                                 class="flex items-center justify-between min-[832px]:text-text-footer min-[832px]:font-semibold min-[832px]:mb-[10px]">
                                                 Apple Wallet
@@ -557,7 +557,7 @@
                                     </div>
                                     <div>
                                         <li
-                                            class="cursor-pointer min-[832px]:cursor-text border-b-[2px] min-[832px]:border-none py-2 li">
+                                            class="cursor-pointer min-[832px]:cursor-text border-b-[2px] min-[832px]:border-none py-2">
                                             <div
                                                 class="flex items-center justify-between min-[832px]:text-text-footer min-[832px]:font-semibold min-[832px]:mb-[10px]">
                                                 Account
@@ -591,7 +591,7 @@
                                             </ul>
                                         </li>
                                         <li
-                                            class="cursor-pointer min-[832px]:cursor-text border-b-[2px] min-[832px]:border-none py-2 li">
+                                            class="cursor-pointer min-[832px]:cursor-text border-b-[2px] min-[832px]:border-none py-2">
                                             <div
                                                 class="flex items-center justify-between min-[832px]:text-text-footer min-[832px]:font-semibold min-[832px]:mb-[10px]">
                                                 Entertainment
@@ -657,7 +657,7 @@
                                     </div>
                                     <div>
                                         <li
-                                            class="cursor-pointer min-[832px]:cursor-text border-b-[2px] min-[832px]:border-none py-2 li ">
+                                            class="cursor-pointer min-[832px]:cursor-text border-b-[2px] min-[832px]:border-none py-2">
                                             <div
                                                 class="flex items-center justify-between min-[832px]:text-text-footer min-[832px]:font-semibold min-[832px]:mb-[10px]">
                                                 Apple Store
@@ -733,7 +733,7 @@
                                     </div>
                                     <div>
                                         <li
-                                            class="cursor-pointer min-[832px]:cursor-text border-b-[2px] min-[832px]:border-none py-2 li ">
+                                            class="cursor-pointer min-[832px]:cursor-text border-b-[2px] min-[832px]:border-none py-2">
                                             <div
                                                 class="flex items-center justify-between min-[832px]:text-text-footer min-[832px]:font-semibold min-[832px]:mb-[10px]">
                                                 For Businnes
@@ -762,7 +762,7 @@
                                             </ul>
                                         </li>
                                         <li
-                                            class="cursor-pointer min-[832px]:cursor-text border-b-[2px] min-[832px]:border-none py-2 li ">
+                                            class="cursor-pointer min-[832px]:cursor-text border-b-[2px] min-[832px]:border-none py-2">
                                             <div
                                                 class="flex items-center justify-between min-[832px]:text-text-footer min-[832px]:font-semibold min-[832px]:mb-[10px]">
                                                 For Education
@@ -796,7 +796,7 @@
                                             </ul>
                                         </li>
                                         <li
-                                            class="cursor-pointer min-[832px]:cursor-text border-b-[2px] min-[832px]:border-none py-2 li ">
+                                            class="cursor-pointer min-[832px]:cursor-text border-b-[2px] min-[832px]:border-none py-2">
                                             <div
                                                 class="flex items-center justify-between min-[832px]:text-text-footer min-[832px]:font-semibold min-[832px]:mb-[10px]">
                                                 For Healthcare
@@ -830,7 +830,7 @@
                                             </ul>
                                         </li>
                                         <li
-                                            class="cursor-pointer min-[832px]:cursor-text border-b-[2px] min-[832px]:border-none py-2 li ">
+                                            class="cursor-pointer min-[832px]:cursor-text border-b-[2px] min-[832px]:border-none py-2">
                                             <div
                                                 class="flex items-center justify-between min-[832px]:text-text-footer min-[832px]:font-semibold min-[832px]:mb-[10px]">
                                                 For Government
@@ -861,7 +861,7 @@
                                     </div>
                                     <div>
                                         <li
-                                            class="cursor-pointer min-[832px]:cursor-text border-b-[2px] min-[832px]:border-none py-2 li ">
+                                            class="cursor-pointer min-[832px]:cursor-text border-b-[2px] min-[832px]:border-none py-2">
                                             <div
                                                 class="flex items-center justify-between min-[832px]:text-text-footer min-[832px]:font-semibold min-[832px]:mb-[10px]">
                                                 Apple Values
@@ -915,7 +915,7 @@
                                             </ul>
                                         </li>
                                         <li
-                                            class="cursor-pointer min-[832px]:cursor-text border-b-[2px] min-[832px]:border-none py-2 li ">
+                                            class="cursor-pointer min-[832px]:cursor-text border-b-[2px] min-[832px]:border-none py-2">
                                             <div
                                                 class="flex items-center justify-between min-[832px]:text-text-footer min-[832px]:font-semibold min-[832px]:mb-[10px]">
                                                 About Apple
